--- a/todo
+++ b/todo
@@ -1,4 +1,11 @@
 todo;
 	write on how to trun off right HDD. ok ? with umount and hdparm
 
+finish these articles:
+
+        articles/learnt-from-teacher.md
+        articles/privacy.md
+        articles/tecbot.using.kangaroo.md
+        articles/vpnnnn.md
+
 
