--- a/todo
+++ b/todo
@@ -1,3 +1,14 @@
+
+
+DONE:
+	viewport
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
+not done:
+
 todo;
 	write on how to trun off right HDD. ok ? with umount and hdparm
 
